2010-03-15  Andreas Politz  <politza@fh-trier.de>  (tiny change)

	* editfns.c (Fformat): Account for string precision when computing
	field width (Bug#5710).

2010-03-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	Make it possible to C-g in a tight bytecode loop again (bug#5680).
	* lisp.h (ELSE_PENDING_SIGNALS): New macro.
	(QUIT): Use it to consolidate code and remove redundancy.
	* bytecode.c (BYTE_CODE_QUIT): Use it as well.

	* regex.c (regex_compile): Setup gl_state as well.

	* syntax.c (skip_chars): Setup gl_state (bug#3823).
	(in_classes): Use CONSP before XCAR/XCDR.

2010-03-03  Chong Yidong  <cyd@stupidchicken.com>

	* keymap.c (Fwhere_is_internal): Use Fequal to compare
	definitions, so that keyboard macros are correctly handled
	(Bug#5481).

2010-03-02  Eli Zaretskii  <eliz@gnu.org>

	* coding.c (decode_coding_emacs_mule): Fixup pointers to buffer
	text that could be relocated inside the call to emacs_mule_char.
	(emacs_mule_char): Use CODING_DECODE_CHAR instead of DECODE_CHAR.
	(CODING_DECODE_CHAR): Add a comment describing its purpose.

2010-03-02  Kenichi Handa  <handa@m17n.org>

	* character.c (parse_str_as_multibyte): Fix handling of the
	multibyte form of raw-bytes.
	(str_as_multibyte): Likewise.

	* buffer.c (Fset_buffer_multibyte): Fix handling of the multibyte
	form of raw-bytes.

2010-02-28  Chong Yidong  <cyd@stupidchicken.com>

	* charset.c (load_charset_map_from_file)
	(load_charset_map_from_vector): Zero out allocated
	charset_map_entries before using them.

2010-02-27  Andreas Schwab  <schwab@linux-m68k.org>

	* w32uniscribe.c (uniscribe_check_otf): Fix length check.

2010-02-27  Chong Yidong  <cyd@stupidchicken.com>

	* font.c (font_parse_fcname): Recognize "Book", "Condensed",
	"Medium", and "Semi-Condensed" keywords in GTK names (Bug#5646).

2010-02-26  Kenichi Handa  <handa@m17n.org>

	* ftfont.c (ftfont_get_open_type_spec): Fix parsing of otf_spec.

	* xdisp.c (reseat_to_string): Fix previous change.
